--- a/ressources/style/equipe.css
+++ b/ressources/style/equipe.css
@@ -36,6 +36,7 @@ nav{
 }
   
 .nav-icon span {
+    font-family: 'Press Start 2P', cursive;
     font-size: 25px;
     font-weight: 400;
     color: #c5c5c6  ;
