--- a/ressources/style/style.css
+++ b/ressources/style/style.css
@@ -56,11 +56,6 @@ nav{
 .navlinks a:hover {
   color: blanchedalmond;
 }
-p {
-  font-size: 30px;
-  text-align: center;
-  margin: auto;
-}
 
 .D_Button {
   text-align: center;
@@ -75,4 +70,11 @@ p {
   color: #c5c5c6;
   background: green;
   text-decoration: none;
+}
+
+title {
+  font-size: 30px;
+  text-align: center;
+  margin: auto;
+  font-family: 'Press Start 2P', cursive;
 }
