--- a/ressources/style/style.css
+++ b/ressources/style/style.css
@@ -56,7 +56,8 @@ nav{
 .navlinks a:hover {
   color: blanchedalmond;
 }
-title {
+
+.title {
   font-size: 30px;
   text-align: center;
   margin: auto;
