--- a/ressources/style/style.css
+++ b/ressources/style/style.css
@@ -82,6 +82,7 @@ nav{
   border: 10px;
   font-size: 40px;
   background: green;
+  align-self: center;
 }
 
 
@@ -92,11 +93,9 @@ nav{
 
 .histoire {
   text-align: center;
-  margin-top: 50px;
   width: 75%;
   font-size: 25px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 50px auto auto;
 }
 
 h1 {
