--- a/ressources/style/style.css
+++ b/ressources/style/style.css
@@ -101,6 +101,12 @@ nav{
   font-size: 25px;
   margin: 50px auto auto;
 }
+.equipe {
+  text-align: center;
+  width: 75%;
+  font-size: 25px;
+  margin: 50px auto auto;
+}
 
 h1 {
   margin-bottom: 30px;
