--- a/ressources/style/style.css
+++ b/ressources/style/style.css
@@ -101,7 +101,7 @@ nav{
   font-size: 25px;
   margin: 50px auto auto;
 }
-.equipe {
+.p {
   text-align: center;
   width: 75%;
   font-size: 25px;
