--- a/ressources/style/style.css
+++ b/ressources/style/style.css
@@ -127,129 +127,72 @@ h1 {
   bottom: 0;
 }
 
-/********
-SLIDESHOW
-*********/
-
-#wrapper{
-  background-color: #ecf0f1;
-  font-family: 'Anton', sans-serif;
-	width:600px;
-	margin:50px auto;
-	height:400px;
-	color:#fff;
-	text-shadow:rgba(0,0,0,0.1) 2px 2px 0px;	
+.card {
+  position: relative;
+  width: 700px;
+  height: 400px;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 }
 
-#slider-wrap{
-	width:600px;
-	height:400px;
-  overflow:hidden;
+/*Light blue cover above the slide show*/
+.card::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 900;
+
+  display: block;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(140, 22, 115, 0.2);
 }
 
-#slider-wrap ul#slider{
-	width:100%;
-	height:100%;
-	top:0;
-	left:0;		
+.card_part {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 7;
+
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  
+  transform: translateX( 700px );
+  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/1.jpg?raw=true );
+  
+  animation: opaqTransition 28s cubic-bezier(0, 0, 0, 0.97) infinite;
 }
 
-#slider-wrap ul#slider li{
-	float:left;
-	width:600px;
-	height:400px;	
+
+.card_part.card_part-two {
+  z-index: 6;
+  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/2.jpg?raw=true );
+  animation-delay: 7s;
 }
 
-#slider-wrap ul#slider li > div{
-	top:20px;
-	left:35px;	
+.card_part.card_part-three {
+  z-index: 5;
+  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/3.jpg?raw=true );
+  animation-delay: 14s;
 }
 
-.img{
-  width: auto;
-  height: auto;
+.card_part.card_part-four {
+  z-index: 4;
+  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/4.jpg?raw=true );
+  animation-delay: 21s;
 }
 
-/*btns*/
-.btns{
-	width:50px;
-	height:60px;
-	top:50%;
-	margin-top:-25px;
-	line-height:57px;
-	text-align:center;
-	cursor:pointer;	
-	background:rgba(0,0,0,0.1);
-	z-index:100;
-	
-	user-select: auto;
-	-webkit-user-select: none;  
-	-moz-user-select: none; 
-	-khtml-user-select: none; 
-	-ms-user-select: none;
-	
-	-webkit-transition: all 0.1s ease;
-	-moz-transition: all 0.1s ease;
-	-o-transition: all 0.1s ease;
-	-ms-transition: all 0.1s ease;
-	transition: all 0.1s ease;
-}
 
-.btns:hover{
-	background:rgba(0,0,0,0.3);	
-}
-
-#next{right:-50px; border-radius:7px 0px 0px 7px;}
-#previous{left:-50px; border-radius:0px 7px 7px 7px;}
-#counter{
-	top: 30px; 
-	right:35px; 
-	width:auto;
-}
-
-#slider-wrap.active #next{right:0px;}
-#slider-wrap.active #previous{left:0px;}
-
-
-/*bar*/
-#pagination-wrap{
-	min-width:20px;
-	margin-top:350px;
-	margin-left: auto; 
-	margin-right: auto;
-	height:15px;
-	text-align:center;
-}
-
-#pagination-wrap ul {
-	width:100%;
-}
-
-#pagination-wrap ul li{
-	margin: 0 4px;
-	display: inline-block;
-	width:5px;
-	height:5px;
-	border-radius:50%;
-	background:#fff;
-	opacity:0.5;
-	position:relative;
-  top:0;
-}
-
-#pagination-wrap ul li.active{
-  width:12px;
-  height:12px;
-  top:3px;
-	opacity:1;
-	box-shadow:rgba(0,0,0,0.1) 1px 1px 0px;	
-}
-
-/*ANIMATION*/
-#slider-wrap ul, #pagination-wrap ul li{
-	-webkit-transition: all 0.3s cubic-bezier(1,.01,.32,1);
-	-moz-transition: all 0.3s cubic-bezier(1,.01,.32,1);
-	-o-transition: all 0.3s cubic-bezier(1,.01,.32,1);
-	-ms-transition: all 0.3s cubic-bezier(1,.01,.32,1);
-	transition: all 0.3s cubic-bezier(1,.01,.32,1);	
+@keyframes opaqTransition {
+  3% { transform: translateX( 0 ); }
+  25% { transform: translateX( 0 ); }
+  28% { transform: translateX( -700px ); }
+  100% { transform: translateX( -700px ); }
 }
