--- a/ressources/style/style.css
+++ b/ressources/style/style.css
@@ -101,18 +101,13 @@ nav{
   font-size: 25px;
   margin: 50px auto auto;
 }
-.p1 {
+.p {
   text-align: center;
   width: 75%;
   font-size: 25px;
   margin: 50px auto auto;
 }
-.p2 {
-  text-align: center;
-  width: 75%;
-  font-size: 25px;
-  margin: 50px auto auto;
-}
+
 
 h1 {
   margin-bottom: 30px;
