--- a/ressources/style/style.css
+++ b/ressources/style/style.css
@@ -113,13 +113,22 @@ h1 {
   margin-bottom: 30px;
   margin-right: 1000px;
   font-family: 'Press Start 2P', cursive;
-  font-size: 120%
+  font-size: 120%;
+  width: 100%;
 }
 
 .accueil_img2 {
   width: 100%;
   height: auto;
   bottom: 0;
+}
+
+.equipe {
+  font-family: 'Ubuntu Mono', monospace;
+  text-align: center;
+  width: 75%;
+  font-size: 25px;
+  margin: 50px auto auto;
 }
 
 .card {
