--- a/ressources/style/style.css
+++ b/ressources/style/style.css
@@ -130,6 +130,202 @@ h1 {
   font-size: 25px;
   margin: 50px auto auto;
 }
+
+.card {
+  position: relative;
+  width: 700px;
+  height: 400px;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+/*Light blue cover above the slide show*/
+.card::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 900;
+
+  display: block;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(140, 22, 115, 0.2);
+}
+
+.card_part {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 7;
+
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  
+  transform: translateX( 700px );
+  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/1.jpg?raw=true );
+  
+  animation: opaqTransition 28s cubic-bezier(0, 0, 0, 0.97) infinite;
+}
+
+
+.card_part.card_part-two {
+  z-index: 6;
+  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/2.jpg?raw=true );
+  animation-delay: 7s;
+}
+
+.card_part.card_part-three {
+  z-index: 5;
+  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/3.jpg?raw=true );
+  animation-delay: 14s;
+}
+
+.card_part.card_part-four {
+  z-index: 4;
+  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/4.jpg?raw=true );
+  animation-delay: 21s;
+}
+
+
+@keyframes opaqTransition {*,
+::before,
+::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+    background-color: #fd9c0f;
+}
+
+.content {
+  margin-top: 70px;
+  align-items: center;
+  font-family: 'Ubuntu Mono', monospace;
+}
+
+nav{
+  position: fixed;
+  width: 100%;
+  display: flex;
+  top: 0;
+  align-items: center;  
+  padding: 33px 25px;
+  background: #783F0D;
+  box-shadow: inset 0px -1px 0px #333;
+}
+
+.nav-icon {
+  display: flex;
+  align-items: center;  
+  text-decoration: none;
+  margin-right: 25px;
+  margin-left: 20px;
+}
+
+.nav-icon span {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 25px;
+  font-weight: 400;
+  color: #c5c5c6  ;
+  margin-left: 20px;
+  margin-right: 15px;
+}
+
+.navlinks {
+  font-size: 25px;
+  font-family: 'Ubuntu Mono', monospace;
+}
+.navlinks a {
+  text-decoration: none;
+  color: #c5c5c6;
+
+}
+.navlinks a:hover {
+  color: black;
+}
+
+.nav-icon span:hover{
+  color: black;
+}
+
+.title {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 30px;
+  text-align: center;
+  margin: auto;
+}
+
+.button_container  {
+  align-items: center;
+  text-align: center;
+}
+
+.button_container img {
+  width: 100%;
+  height: auto;
+}
+
+.D_Button {
+  text-align: center;
+  padding: 10px 10px;
+  border-radius: 25px;
+  border: 10px;
+  background: green;
+  font-size: 170%;
+  align-self: center;
+}
+
+
+.D_Button a {
+  text-decoration: none;
+  color: #c5c5c6;
+  font-family: 'Press Start 2P', cursive;
+}
+
+.histoire {
+  text-align: center;
+  width: 75%;
+  font-size: 25px;
+  margin: 50px auto auto;
+}
+.p {
+  text-align: center;
+  width: 75%;
+  font-size: 25px;
+  margin: 50px auto auto;
+}
+
+
+h1 {
+  margin-bottom: 30px;
+  margin-right: 1000px;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 120%;
+  width: 100%;
+}
+
+.accueil_img2 {
+  width: 100%;
+  height: auto;
+  bottom: 0;
+}
+
+.equipe {
+  font-family: 'Ubuntu Mono', monospace;
+  text-align: center;
+  width: 75%;
+  font-size: 25px;
+  margin: 50px auto auto;
+}
 .credits {
   font-family: 'Ubuntu Mono', monospace;
   text-align: center;
@@ -202,6 +398,11 @@ h1 {
 
 
 @keyframes opaqTransition {
+  3% { transform: translateX( 0 ); }
+  25% { transform: translateX( 0 ); }
+  28% { transform: translateX( -700px ); }
+  100% { transform: translateX( -700px ); }
+}
   3% { transform: translateX( 0 ); }
   25% { transform: translateX( 0 ); }
   28% { transform: translateX( -700px ); }
