--- a/ressources/style/style.css
+++ b/ressources/style/style.css
@@ -131,6 +131,14 @@ h1 {
   margin: 50px auto auto;
 }
 
+.grille {
+
+}
+
+/*********
+SLIDESHOW
+*********/
+
 .card {
   position: relative;
   width: 700px;
@@ -169,27 +177,27 @@ h1 {
   height: 100%;
   
   transform: translateX( 700px );
-  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/1.jpg?raw=true );
-  
+  background-image: url( https://nsi-corneille.github.io/ressources/images/screen1.png );
+  background-size: 700px 400px;
   animation: opaqTransition 28s cubic-bezier(0, 0, 0, 0.97) infinite;
 }
 
 
 .card_part.card_part-two {
   z-index: 6;
-  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/2.jpg?raw=true );
+  background-image: url( https://nsi-corneille.github.io/ressources/images/screen2.png );
   animation-delay: 7s;
 }
 
 .card_part.card_part-three {
   z-index: 5;
-  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/3.jpg?raw=true );
+  background-image: url( https://nsi-corneille.github.io/ressources/images/screen3.png );
   animation-delay: 14s;
 }
 
 .card_part.card_part-four {
   z-index: 4;
-  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/4.jpg?raw=true );
+  background-image: url( https://nsi-corneille.github.io/ressources/images/screen1.png );
   animation-delay: 21s;
 }
 
@@ -376,27 +384,27 @@ SLIDESHOW
   height: 100%;
   
   transform: translateX( 700px );
-  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/1.jpg?raw=true );
-  
+  background-image: url( https://nsi-corneille.github.io/ressources/images/screen1.png );
+  background-size: 700px 400px;
   animation: opaqTransition 28s cubic-bezier(0, 0, 0, 0.97) infinite;
 }
 
 
 .card_part.card_part-two {
   z-index: 6;
-  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/2.jpg?raw=true );
+  background-image: url( https://nsi-corneille.github.io/ressources/images/screen2.png );
   animation-delay: 7s;
 }
 
 .card_part.card_part-three {
   z-index: 5;
-  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/3.jpg?raw=true );
+  background-image: url( https://nsi-corneille.github.io/ressources/images/screen3.png );
   animation-delay: 14s;
 }
 
 .card_part.card_part-four {
   z-index: 4;
-  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/4.jpg?raw=true );
+  background-image: url( https://nsi-corneille.github.io/ressources/images/screen1.png );
   animation-delay: 21s;
 }
 
